--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "otus-crud",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "lint": "prettier --check . && eslint . --ext .js,.ts && tsc --noEmit",
@@ -11,7 +11,8 @@
     "dev": "cross-env NODE_ENV=development webpack ",
     "start": "cross-env NODE_ENV=development webpack serve --open",
     "prepare": "husky install",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "server": "nodemon src/server.js"
   },
   "browserslist": [
     "last 2 versions",
@@ -65,7 +66,10 @@
     "typescript": "^4.5.4",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
